reworked markup; styled the elements; corrected margins and paddings; enlarged the fonts and changed font family; adjusted adaptive layout; removed text placeholders and inserted content; added transitions, titles and hover/active states to all interactive elements; changed font color to add more contrast -> readability; added width and height to <svg> elements in HTML markup (they weren't there in the original tailblock markup, I was kinda shocked); installed purgeCSS to use for production builds;

--- a/src/sass/global/_scaffolding.scss
+++ b/src/sass/global/_scaffolding.scss
@@ -1,15 +1,3 @@
-//! прописать свой шрифт в @font-face и body
-
-@font-face {
-  font-family: 'Oswald-Regular';
-  font-style: normal;
-  font-weight: normal;
-  font-display: swap;
-
-  src: url('/fonts/Oswald-Regular.woff') format('woff2'),
-    url('/fonts/Oswald-Regular.woff') format('woff');
-}
-
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -27,11 +15,11 @@ body {
   padding: 0;
   margin: 0;
 
-  font-family: 'Oswald-Regular', 'Arial', sans-serif;
-  font-size: 1.125rem;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.2em;
+  line-height: 1.35em;
   color: #000;
 
   background-color: #fff;
